Stop post list styles bleeding into post content

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,14 +23,14 @@ h1, h2, h3, h4 {
     word-spacing: -0.2rem;
 }
 
-ul.post-list li {
+ul.post-list li.post-list-item {
     margin-bottom: 35px;
     border-bottom: 1px solid lightgray;
 
     h2 {
         padding:0;
         margin:0;
-        line-height: 2rem;
+        line-height: 2.4rem;
         a.post-link {
             font-size: 2.1rem;
         }
@@ -72,7 +72,7 @@ ul.post-list li {
 .post {
     .post-title {
         font-size: 2.4rem;
-        line-height: 1;
+        line-height: 1.1;
         margin:10px 0 2px 0;
         padding:0;
     }
@@ -111,6 +111,12 @@ header.site-header {
     background-image: linear-gradient(-180deg, #4CA2CD 2%, #67B26F 92%);
     border: none;
     padding: 10px 0;
+}
+@media screen and (max-width: 600px) {
+    .site-nav {
+        background-image: linear-gradient(-180deg, #4CA2CD 2%, #67B26F 92%);
+        margin-top:20px;
+    }
 }
 
 footer.site-footer {
